№5 Ф5 реализация с LinkedList